The list of new features includes the date Virtualmin was installed.
Email to domain owners for over-bandwidth warnings, new script notifications and others can now come from their resellers' addresses, if set. This behaviour must be enabled using a new setting on the <b>Module Config</b> page, under <b>Actions upon server and user creation</b>.
---- Changes since 3.54 ----
Updated the osTicket script installer to version 1.6.rc4, Instiki to 0.13.0, and Php-Wiki to 1.2.11. Also added the latest 1.70+ build of LimeSurvey.
New DNS domains have the localhost A record added, with an IP of 127.0.0.1.
When a script is installed into a path that is already served by a proxy (such as for a rails application on /), a negating proxy rule is added so that the script is accessible.
When migrating a domain from other control panel like Plesk, you can now select to have to downloaded directly from a remote FTP or SSH server. The migrate-domain.pl command-line script also allows use of ftp:// or ssh:// URLs for backup sources.
If the skeleton directory contains a public_html sub-directory, it is copied to a sub-domain's web pages directory when the domain is created.
For alias domains whose virtusers are always copied from the target, no home directory is created (as it isn't needed).
The path to the public_html and cgi-bin directories is now stored in each new domain's data file, so that they are correctly preserved when the path is changed in the template, or the domain is moved to another system with a different directory name.
Basic Exim support, thanks to Bill Moyers and John Gray.
When migrating a cPanel, Plesk or Ensim backup, the original domain name can now be worked out automatically, as long as the backup contains just one.